# handheld-game-console

./: LICENSE  README.md
pcb/: Game Console PCB.kicad_pcb  Game Console PCB.kicad_pro  Game Console PCB.kicad_sch
pcb/Gerber/: Game Console PCB-B_Cu.gbr  Game Console PCB-B_Mask.gbr  Game Console PCB-B_Paste.gbr  Game Console PCB-B_Silkscreen.gbr  Game Console PCB-Edge_Cuts.gbr  Game Console PCB-F_Cu.gbr  Game Console PCB-F_Mask.gbr  Game Console PCB-F_Paste.gbr  Game Console PCB-F_Silkscreen.gbr  Game Console PCB-NPTH-drl_map.gbr  Game Console PCB-NPTH.drl  Game Console PCB-PTH-drl_map.gbr  Game Console PCB-PTH.drl  Game Console PCB-job.gbrjob
radxa-rock-5c/: deploy.sh  gpio_testing.py  gpio_to_keypress.c
radxa-rock-5c/flutter_src/: CMakeLists.txt
radxa-rock-5c/flutter_src/lib/: main.dart
radxa-rock-5c/flutter_src/lib/models/: game.dart  settings.dart
radxa-rock-5c/flutter_src/lib/widgets/: settings_item.dart  settings_panel.dart
raspberry-pi/game_console/: main.cpp
raspberry-pi/game_console/games/game_src/dodgers/: CMakeLists.txt  main.cpp
raspberry-pi/game_console/games/game_src/flappy_bird/: CMakeLists.txt
raspberry-pi/game_console/games/game_src/platformer/: CMakeLists.txt
raspberry-pi/game_console/games/game_src/pong/: CMakeLists.txt  main.cpp
raspberry-pi/game_console/src/: CustomColors.h  gameLoader.h  systemStats.h
raspberry-pi/game_console/src/ui/: MenuButton.cpp  MenuButton.h  MoreSettings.h  Row.cpp
v1-raspberry-pi/: gpio_to_keypress.c
v1-raspberry-pi/game_console/: CMakeLists.txt
v1-raspberry-pi/game_console/games/game_src/flappy_bird/: main.cpp
v1-raspberry-pi/game_console/games/game_src/pacman/: CMakeLists.txt  main.cpp
v1-raspberry-pi/game_console/games/game_src/platformer/: main.cpp
v1-raspberry-pi/game_console/src/: alignment.cpp  gameLoader.cpp  systemStats.cpp
v1-raspberry-pi/game_console/src/ui/: Background.cpp  Background.h  MoreSettings.cpp  Row.h
v2-radxa-rock-5c/: gpio_to_keypress.c  launcher.sh
v2-radxa-rock-5c/flutter_src/: pubspec.yaml
v2-radxa-rock-5c/flutter_src/lib/models/: keyboard_manager.dart
v2-radxa-rock-5c/flutter_src/lib/screens/: console_home_screen.dart
v2-radxa-rock-5c/flutter_src/lib/utils/: painters.dart
v2-radxa-rock-5c/flutter_src/lib/widgets/: custom_keyboard.dart  performance_settings.dart  wifi_settings.dart
